--- a/waybar/style.css
+++ b/waybar/style.css
@@ -24,6 +24,7 @@ window#waybar {
 #clock,
 #pulseaudio,
 #window,
+#custom-notification,
 #workspaces {
   box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.25);
   margin-left: 4px;
@@ -72,4 +73,9 @@ window#waybar {
 /* Window */
 #waybar.empty #window {
   opacity: 0.5;
+}
+
+/* Custom Notification */
+#custom-notification {
+  font-family: "NotoSansMono Nerd Font";
 }
