--- a/waybar/style.css
+++ b/waybar/style.css
@@ -2,7 +2,7 @@
 
 * {
   /* `otf-font-awesome` is required to be installed for icons */
-  font-family: "SF Pro", "Font Awesome 7 Free Solid", Roboto, Helvetica, Arial, sans-serif;
+  font-family: "SF Pro", "Font Awesome 7 Free Solid", "Symbols Nerd Font", Roboto, Helvetica, Arial, sans-serif;
   font-size: 14px;
   font-weight: 500;
   color: white;
@@ -25,6 +25,8 @@ window#waybar {
 #pulseaudio,
 #window,
 #custom-notification,
+#network,
+#tray,
 #workspaces {
   box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.25);
   margin-left: 4px;
@@ -77,5 +79,6 @@ window#waybar {
 
 /* Custom Notification */
 #custom-notification {
-  font-family: "NotoSansMono Nerd Font";
+  font-family: "Symbols Nerd Font";
+  font-size: 16px;
 }
