--- a/waybar/style.css
+++ b/waybar/style.css
@@ -5,7 +5,6 @@
   font-family: "SF Pro", "Font Awesome 7 Free Solid", "Symbols Nerd Font", Roboto, Helvetica, Arial, sans-serif;
   font-size: 14px;
   font-weight: 500;
-  color: white;
 }
 
 window#waybar {
@@ -37,6 +36,7 @@ window#waybar {
   padding-left: 12px;
   padding-right: 12px;
   transition: all 0.3s ease-out;
+  color: white;
   background: rgba(0, 0, 0, 0.5);
 }
 
@@ -59,6 +59,7 @@ window#waybar {
   border: none;
   border-radius: 999px;
   transition: all 0.3s ease-out;
+  color: transparent;
   background: white;
 }
 
@@ -69,6 +70,7 @@ window#waybar {
 
 #workspaces button:hover {
   box-shadow: none;
+  color: black;
   background: @foreground;
 }
 
