--- a/waybar/style.css
+++ b/waybar/style.css
@@ -25,13 +25,10 @@ window#waybar {
 #window,
 #custom-notification,
 #network,
-#tray,
+#taskbar,
 #workspaces {
   box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.25);
-  margin-left: 4px;
-  margin-right: 4px;
-  margin-top: 6px;
-  margin-bottom: 4px;
+  margin: 6px 4px 4px 4px;
   border-radius: 12px;
   padding-left: 12px;
   padding-right: 12px;
@@ -47,10 +44,7 @@ window#waybar {
 }
 
 #workspaces button {
-  margin-top: 4px;
-  margin-bottom: 4px;
-  margin-left: 2px;
-  margin-right: 2px;
+  margin: 4px 2px 4px 2px;
   padding: 0px;
   min-width: 22px;
   min-height: 18px;
@@ -83,4 +77,16 @@ window#waybar {
 #custom-notification {
   font-family: "Symbols Nerd Font";
   font-size: 16px;
+}
+
+/* Taskbar */
+#taskbar {
+  padding: 2px 6px 2px 6px;
+}
+#taskbar button {
+  padding: 0px 6px 0px 6px;
+  border-radius: 10px;
+}
+#taskbar button.active {
+  background-color: rgba(255, 255, 255, 0.1);
 }
