--- a/waybar/style.css
+++ b/waybar/style.css
@@ -83,6 +83,11 @@ window#waybar {
 #taskbar {
   padding: 2px 6px 2px 6px;
 }
+#taskbar.empty {
+  opacity: 1;
+  padding: 0px 0px 0px 0px;
+  margin-left: -8px;
+}
 #taskbar button {
   padding: 0px 6px 0px 6px;
   border-radius: 10px;
