--- a/swaync/style.css
+++ b/swaync/style.css
@@ -5,20 +5,20 @@
   --noti-bg-alpha: 0.8;
   --noti-bg-darker: rgb(38, 38, 38);
   --noti-bg-hover: rgb(56, 56, 56);
-  --noti-bg-focus: rgba(68, 68, 68, 0.6);
+  --noti-bg-focus: transparent;
   --noti-close-bg: rgb(78, 78, 78);
   --noti-close-bg-hover: rgb(94, 94, 94);
   --text-color: rgb(255, 255, 255);
   --text-color-disabled: rgb(150, 150, 150);
   --bg-selected: rgb(0, 128, 255);
-  --notification-icon-size: 64px;
+  --notification-icon-size: 40px;
   --notification-app-icon-size: calc(var(--notification-icon-size) / 3);
-  --notification-group-icon-size: 32px;
+  --notification-group-icon-size: 24px;
   --border: 1px solid var(--noti-border-color);
   --border-radius: 12px;
   --notification-shadow: 0 0 0 1px rgba(0, 0, 0, 0.3), 0 1px 3px 1px rgba(0, 0, 0, 0.7), 0 2px 6px 2px rgba(0, 0, 0, 0.3);
-  --font-size-body: 15px;
-  --font-size-summary: 16px;
+  --font-size-body: 12px;
+  --font-size-summary: 14px;
   /* Deprecated variables (because of their typos). Keeeping them around for backwards compatibility. */
   --hover-tranistion: background 0.15s ease-in-out;
   --group-collapse-tranistion: opacity 400ms ease-in-out;
@@ -79,7 +79,8 @@ blankwindow {
 }
 
 .notification-row .notification-background {
-  padding: 6px 12px;
+  padding: 6px 24px 34px 24px;
+  margin-right: -16px;
 }
 
 .notification-row .notification-background .notification {
@@ -90,7 +91,6 @@ blankwindow {
   transition: var(--hover-tranistion);
   background: rgba(var(--noti-bg), var(--noti-bg-alpha));
   box-shadow: 0px 10px 24px rgba(0, 0, 0, 0.5);
-  margin-bottom: 100px;
 }
 
 .notification-row .notification-background .notification.low {
@@ -140,7 +140,7 @@ blankwindow {
   -gtk-icon-size: var(--notification-icon-size);
   border-radius: 100px;
   /* Size in px */
-  margin: 4px;
+  margin: 4px 8px 4px 4px;
 }
 
 .notification-row .notification-background .notification .notification-default-action .notification-content .app-icon {
@@ -280,6 +280,8 @@ blankwindow {
 
 .notification-group .notification-group-headers {
   /* Notification Group Headers */
+  font-size: 0.75rem;
+  font-weight: 500;
 }
 
 .notification-group .notification-group-headers .notification-group-icon {
@@ -326,6 +328,8 @@ blankwindow {
   background: var(--cc-bg);
   color: var(--text-color);
   border-radius: var(--border-radius);
+  box-shadow: 0px 10px 24px rgba(0, 0, 0, 0.5);
+  border: var(--border);
 }
 
 .control-center .control-center-list-placeholder {
