--- a/waybar/style.css
+++ b/waybar/style.css
@@ -39,15 +39,16 @@ window#waybar {
 
 /* Workspaces */
 #workspaces {
-  padding: 0px 4px 0px 4px;
+  margin: 10px 4px 10px 4px;
+  padding: 3px 2px 3px 2px;
   border-radius: 999px;
 }
 
 #workspaces button {
-  margin: 4px 2px 4px 2px;
+  margin: 0px 2px 0px 2px;
   padding: 0px;
-  min-width: 22px;
-  min-height: 18px;
+  min-width: 20px;
+  min-height: 0px;
   border-radius: 15px;
   opacity: 0.5;
   border: none;
@@ -55,6 +56,10 @@ window#waybar {
   transition: all 0.3s ease-out;
   color: transparent;
   background: white;
+}
+
+#workspaces label {
+  font-size: 0px;
 }
 
 #workspaces button.active {
