--- a/waybar/style.css
+++ b/waybar/style.css
@@ -2,7 +2,7 @@
 
 * {
   /* `otf-font-awesome` is required to be installed for icons */
-  font-family: "SF Pro", "Font Awesome 7 Free Solid", "Symbols Nerd Font", Roboto, Helvetica, Arial, sans-serif;
+  font-family: "SF Pro Text", "Font Awesome 7 Free Solid", "Symbols Nerd Font", Roboto, Helvetica, Arial, sans-serif;
   font-size: 14px;
   font-weight: 500;
 }
@@ -21,11 +21,10 @@ window#waybar {
 /* Defaults  */
 #language,
 #clock,
-#pulseaudio,
 #window,
 #custom-notification,
-#network,
 #taskbar,
+#settings,
 #workspaces {
   box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.25);
   margin: 6px 4px 4px 4px;
@@ -99,4 +98,9 @@ window#waybar {
 }
 #taskbar button.active {
   background-color: rgba(255, 255, 255, 0.1);
+}
+
+/* Divider */
+#custom-divider {
+  margin: 0px 4px 0px 4px;
 }
