--- a/waybar/style.css
+++ b/waybar/style.css
@@ -38,38 +38,31 @@ window#waybar {
 
 /* Workspaces */
 #workspaces {
-  margin: 10px 4px 10px 4px;
   padding: 3px 2px 3px 2px;
-  border-radius: 999px;
 }
 
 #workspaces button {
   margin: 0px 2px 0px 2px;
-  padding: 0px;
+  padding: 0px 6px;
   min-width: 20px;
-  min-height: 0px;
-  border-radius: 15px;
-  opacity: 0.4;
   border: none;
-  border-radius: 999px;
+  border-radius: 8px;
   transition: all 0.3s ease-out;
   color: transparent;
-  background: white;
+  background: rgba(255, 255, 255, 0.1);
 }
 
-#workspaces label {
-  font-size: 0px;
+#workspaces .taskbar-window {
+  opacity: 0.5;
 }
 
 #workspaces button.active {
   min-width: 40px;
-  opacity: 0.8;
+  background: rgba(255, 255, 255, 0.75);
 }
 
-#workspaces button:hover {
-  box-shadow: none;
-  color: black;
-  background: @foreground;
+#workspaces button.active .taskbar-window {
+  opacity: 1;
 }
 
 /* Window */
