--- a/waybar/style.css
+++ b/waybar/style.css
@@ -25,6 +25,7 @@ window#waybar {
 #custom-notification,
 #taskbar,
 #settings,
+#hypr-ws-apps,
 #workspaces {
   box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.25);
   margin: 6px 4px 4px 4px;
@@ -46,7 +47,7 @@ window#waybar {
   padding: 0px 6px;
   min-width: 20px;
   border: none;
-  border-radius: 8px;
+  border-radius: 9px;
   transition: all 0.3s ease-out;
   color: transparent;
   background: rgba(255, 255, 255, 0.1);
@@ -96,4 +97,27 @@ window#waybar {
 /* Divider */
 #custom-divider {
   margin: 0px 4px 0px 4px;
+}
+
+/* hypr-ws-apps */
+#hypr-ws-apps {
+  padding: 3px;
+  opacity: 0.5;
+}
+
+#hypr-ws-apps-row {
+  transition: all 0.3s ease-out;
+  background-color: rgba(255, 255, 255, 0.1);
+  border-radius: 9px;
+  min-width: 34px;
+}
+
+#hypr-ws-apps-row.empty {
+  min-width: 0px;
+}
+
+#hypr-ws-apps.empty {
+  margin-left: -4px;
+  padding: 0px;
+  opacity: 0;
 }
