--- a/hypr/wallpaper/colors.css
+++ b/hypr/wallpaper/colors.css
@@ -1,20 +1,20 @@
-@define-color background #09090b;
-@define-color foreground #c4d2ff;
-@define-color cursor #c4d2ff;
-@define-color border #c4d2ff;
-@define-color color0 #09090b;
-@define-color color1 #363c5b;
-@define-color color2 #553f1e;
-@define-color color3 #474152;
-@define-color color4 #444862;
-@define-color color5 #535865;
-@define-color color6 #526686;
-@define-color color7 #939cc8;
-@define-color color8 #28292e;
-@define-color color9 #434b71;
-@define-color color10 #6a4e25;
-@define-color color11 #585166;
-@define-color color12 #555a7a;
-@define-color color13 #676e7e;
-@define-color color14 #667fa7;
-@define-color color15 #c4d2ff;
+@define-color background #000000;
+@define-color foreground #ffffff;
+@define-color cursor #ffffff;
+@define-color border #ffffff;
+@define-color color0 #000000;
+@define-color color1 #616161;
+@define-color color2 #6a6a6a;
+@define-color color3 #6f6f6f;
+@define-color color4 #6f6f6f;
+@define-color color5 #8b8b8b;
+@define-color color6 #9e9e9e;
+@define-color color7 #dedede;
+@define-color color8 #000000;
+@define-color color9 #797979;
+@define-color color10 #848484;
+@define-color color11 #8a8a8a;
+@define-color color12 #8a8a8a;
+@define-color color13 #adadad;
+@define-color color14 #c5c5c5;
+@define-color color15 #ffffff;
