--- a/waybar/style.css
+++ b/waybar/style.css
@@ -25,6 +25,7 @@ window#waybar {
 #custom-notification,
 #taskbar,
 #settings,
+#tray,
 #hypr-ws-apps,
 #workspaces {
   box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.25);
