--- a/hypr/wallpapers/colors.css
+++ b/hypr/wallpapers/colors.css
@@ -1,20 +1,20 @@
-@define-color background #09090b;
-@define-color foreground #c4d2ff;
-@define-color cursor #c4d2ff;
-@define-color border #c4d2ff;
-@define-color color0 #09090b;
-@define-color color1 #363c5b;
-@define-color color2 #553f1e;
-@define-color color3 #474152;
-@define-color color4 #444862;
-@define-color color5 #535865;
-@define-color color6 #526686;
-@define-color color7 #939cc8;
-@define-color color8 #28292e;
-@define-color color9 #434b71;
-@define-color color10 #6a4e25;
-@define-color color11 #585166;
-@define-color color12 #555a7a;
-@define-color color13 #676e7e;
-@define-color color14 #667fa7;
-@define-color color15 #c4d2ff;
+@define-color background #070a0a;
+@define-color foreground #f7ed9a;
+@define-color cursor #f7ed9a;
+@define-color border #f7ed9a;
+@define-color color0 #070a0a;
+@define-color color1 #213b38;
+@define-color color2 #3e5740;
+@define-color color3 #505841;
+@define-color color4 #4a6a4f;
+@define-color color5 #61692e;
+@define-color color6 #726f2a;
+@define-color color7 #b8b174;
+@define-color color8 #202a2a;
+@define-color color9 #294946;
+@define-color color10 #4d6c50;
+@define-color color11 #646e51;
+@define-color color12 #5c8462;
+@define-color color13 #798339;
+@define-color color14 #8e8a34;
+@define-color color15 #f7ed9a;
