--- a/hypr/wallpapers/colors.css
+++ b/hypr/wallpapers/colors.css
@@ -1,20 +1,20 @@
-@define-color background #070a0a;
-@define-color foreground #f7ed9a;
-@define-color cursor #f7ed9a;
-@define-color border #f7ed9a;
-@define-color color0 #070a0a;
-@define-color color1 #213b38;
-@define-color color2 #3e5740;
-@define-color color3 #505841;
-@define-color color4 #4a6a4f;
-@define-color color5 #61692e;
-@define-color color6 #726f2a;
-@define-color color7 #b8b174;
-@define-color color8 #202a2a;
-@define-color color9 #294946;
-@define-color color10 #4d6c50;
-@define-color color11 #646e51;
-@define-color color12 #5c8462;
-@define-color color13 #798339;
-@define-color color14 #8e8a34;
-@define-color color15 #f7ed9a;
+@define-color background #000000;
+@define-color foreground #ffffff;
+@define-color cursor #ffffff;
+@define-color border #ffffff;
+@define-color color0 #000000;
+@define-color color1 #616161;
+@define-color color2 #6a6a6a;
+@define-color color3 #6f6f6f;
+@define-color color4 #6f6f6f;
+@define-color color5 #8b8b8b;
+@define-color color6 #9e9e9e;
+@define-color color7 #dedede;
+@define-color color8 #000000;
+@define-color color9 #797979;
+@define-color color10 #848484;
+@define-color color11 #8a8a8a;
+@define-color color12 #8a8a8a;
+@define-color color13 #adadad;
+@define-color color14 #c5c5c5;
+@define-color color15 #ffffff;
