--- a/waybar/style.css
+++ b/waybar/style.css
@@ -27,6 +27,7 @@ window#waybar {
 #settings,
 #tray,
 #hypr-ws-apps,
+#mpris,
 #workspaces {
   box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.25);
   margin: 6px 4px 4px 4px;
@@ -129,4 +130,9 @@ window#waybar {
   margin-left: -4px;
   padding: 0px;
   opacity: 0;
+}
+
+/* mpris */
+#mpris.paused {
+  opacity: 0.5;
 }
