--- a/swayosd/style.css
+++ b/swayosd/style.css
@@ -1,8 +1,7 @@
 window#osd {
   border-radius: 16px;
   margin: 32px;
-  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.5);
-  border: 2px solid alpha(@theme_fg_color, 0.15);
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.5), inset 0px 1px 2px rgba(255, 255, 255, 0.3);
   background: alpha(@theme_bg_color, 0.5);
 }
 
@@ -31,6 +30,7 @@ window#osd segmentedprogress {
   border-radius: 999px;
   background: transparent;
   border: none;
+  margin-right: 4px;
 }
 
 window#osd trough,
