--- a/waybar/style.css
+++ b/waybar/style.css
@@ -29,8 +29,8 @@ window#waybar {
 #hypr-ws-apps,
 #mpris,
 #workspaces {
-  box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.25);
-  margin: 6px 4px 4px 4px;
+  box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.5), inset 0px 1px 2px -1px rgba(255, 255, 255, 0.4);
+  margin: 6px 4px 6px 4px;
   border-radius: 12px;
   padding-left: 12px;
   padding-right: 12px;
