--- a/swaync/style.css
+++ b/swaync/style.css
@@ -15,7 +15,7 @@
   --notification-app-icon-size: calc(var(--notification-icon-size) / 3);
   --notification-group-icon-size: 24px;
   --border: 1px solid var(--noti-border-color);
-  --border-radius: 12px;
+  --border-radius: 16px;
   --notification-shadow: 0 0 0 1px rgba(0, 0, 0, 0.2), 0 1px 3px 1px rgba(0, 0, 0, 0.35), 0 2px 6px 2px rgba(0, 0, 0, 0.2);
   --font-size-body: 14px;
   --font-size-summary: 16px;
@@ -61,6 +61,7 @@ blankwindow {
   border: none;
   min-width: 24px;
   min-height: 24px;
+  opacity: 0.5;
 }
 
 .close-button:hover {
@@ -86,12 +87,10 @@ blankwindow {
 
 .notification-row .notification-background .notification {
   /* The actual notification */
-  border-radius: var(--border-radius);
-  border: var(--border);
-  padding: 8px;
+  border: none;
   transition: var(--hover-tranistion);
-  background: rgba(var(--noti-bg), var(--noti-bg-alpha));
-  box-shadow: 0px 10px 24px rgba(0, 0, 0, 0.5);
+  background: rgba(0, 0, 0, 0.5);
+  box-shadow: 0px 8px 20px rgba(0, 0, 0, 0.5), inset 0px 1px 3px rgba(255, 255, 255, 0.5);
 }
 .notification-row .notification-background .notification.low {
   /* Low Priority Notification */
@@ -119,7 +118,6 @@ blankwindow {
 
 .notification-row .notification-background .notification .notification-default-action:hover {
   -gtk-icon-filter: none;
-  background: var(--noti-bg-hover);
 }
 
 .notification-row .notification-background .notification .notification-default-action:not(:only-child) {
@@ -131,7 +129,7 @@ blankwindow {
 .notification-row .notification-background .notification .notification-default-action .notification-content {
   background: transparent;
   border-radius: var(--border-radius);
-  padding: 0;
+  padding: 4px;
 }
 
 .notification-row .notification-background .notification .notification-default-action .notification-content .image {
@@ -139,6 +137,7 @@ blankwindow {
   -gtk-icon-filter: none;
   -gtk-icon-size: var(--notification-icon-size);
   border-radius: 100px;
+  margin-left: 8px;
 }
 
 .notification-row .notification-background .notification .notification-default-action .notification-content .app-icon {
