--- a/swaync/style.css
+++ b/swaync/style.css
@@ -90,7 +90,7 @@ blankwindow {
   border: none;
   transition: var(--hover-tranistion);
   background: rgba(0, 0, 0, 0.5);
-  box-shadow: 0px 8px 20px rgba(0, 0, 0, 0.5), inset 0px 1px 3px rgba(255, 255, 255, 0.5);
+  box-shadow: 0px 8px 20px rgba(0, 0, 0, 0.5), inset 0px 1px 3px -1px rgba(255, 255, 255, 0.5);
 }
 .notification-row .notification-background .notification.low {
   /* Low Priority Notification */
